# ferrofluidSpeaker

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pushBuildFilesThroughscp.sh  workspace.code-workspace
Documentation/: .~lock.Level Diagrams.odg#  Level Diagrams.odg
Source/: CMakeLists.txt
Sources/: BluetoothDriver.cpp  ElectromagnetDriver.cpp  GpioDriver.cpp  NeoPixelDriver.cpp  SoundProcessingDriver.cpp  main.cpp
includes/: BluetoothDriver.hpp  ElectromagnetDriver.hpp  GpioDriver.hpp  NeoPixelDriver.hpp  SoundProcessingDriver.hpp
